added docker compatability